--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="preload" as="font" href="%PUBLIC_URL%/assets/black-font.ttf" />
+    <link rel="preload" as="font" href="%PUBLIC_URL%/black-font.ttf" />
 
     <!--
       manifest.json provides metadata used when your web app is installed on a
